--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 					L'EM Lyon est renommée pour son excellence académique,
 					particulièrement dans les domaines de la finance et de la gestion
 					d'entreprise. En envisageant de fonder ma propre société, je considère
-					la maîtrise de ces deux secteurs comme cruciale pour le succès
+					la maîtrise de ces deux secteurs comme étant cruciale pour le succès
 					entrepreneurial. La complémentarité entre ma formation actuelle en
 					informatique aux Mines de Saint-Étienne et celle proposée par l'EM
-					crée un parcours global et enrichissant. Cette combinaison élargira
-					mes horizons et multipliera mes opportunités professionnelles.
+					crée un parcours global et enrichissant. Ce double-cursus élargira mes
+					horizons et multipliera mes opportunités professionnelles.
 				</p>
 			</section>
 			<section class="parcours general">
@@ -79,15 +79,15 @@
 					<section class="text-parcours">
 						<h2 class="hidden-slide">Gestion d'événements</h2>
 						<p class="hidden-slidein-left">
-							Les événements et la vie associative revêtent une grande
-							importance au sein du BDE. Mon équipe et moi avons eu
-							l'opportunité d'organiser de nombreuses soirées, des sorties à la
-							patinoire, et même un voyage à Barcelone. Nous avons également
-							pris plaisir à organiser une soirée Alumni, dans le but de
-							renforcer les liens avec les anciens élèves. Être à la tête de
-							l'organisation de ces événements a été une expérience très
-							formatrice, où j'ai pu renforcer mes compétences en leadership et
-							en travail d'équipe.
+							Les événements et la vie associative occupent une place importante
+							au sein du BDE. Mon équipe et moi avons eu l'opportunité
+							d'organiser de nombreuses soirées, des sorties à la patinoire, et
+							même un voyage à Barcelone. Nous avons également pris plaisir à
+							organiser une soirée Alumni, dans le but de renforcer les liens
+							avec les anciens élèves. Être à la tête de l'organisation de ces
+							événements a été une expérience très formatrice et a contribué à
+							améliorer mes compétences en termes de leadership et de travail
+							d'équipe.
 						</p>
 					</section>
 					<section class="photo-parcours">
@@ -116,14 +116,16 @@
 						</section>
 						<div class="text-finance">
 							<p class="hidden-up">
-								Développer des compétences en finance ainsi qu'en gestion des
-								ressources est crucial pour le succès d'une entreprise. Je
-								souhaite acquérir une compréhension plus approfondie de la
+								<span class="gras"
+									>Développer des compétences en finance ainsi qu'en gestion des
+									ressources.</span
+								>
+								Je souhaite acquérir une compréhension plus approfondie de la
 								finance afin d'être capable de prendre des décisions plus
 								éclairées en matière d'investissement. Mon objectif principal
 								est d'être en mesure d'élaborer des plans budgétaires solides,
-								contribuant ainsi à assurer une croissance durable et à
-								maintenir la rentabilité à long terme d'une entreprise.
+								afin d'assurer une croissance durable et de maintenir la
+								rentabilité à long terme d'une entreprise.
 							</p>
 						</div>
 					</section>
@@ -134,11 +136,13 @@
 						</section>
 						<div class="text-entreprise">
 							<p class="hidden-up">
-								Je m'efforce de développer une compréhension approfondie du
-								management afin de prendre des décisions éclairées dans la
-								conduite des opérations et la mise en œuvre des stratégies. Mon
-								objectif principal est d'être capable d'élaborer des plans de
-								gestion solides, de coordonner des équipes, de résoudre des
+								<span class="gras"
+									>Développer une compréhension approfondie du management, de la
+									conduite des opérations et de la mise en œuvre de
+									stratégies.</span
+								>
+								Mon objectif principal est d'être capable d'élaborer des plans
+								de gestion solides, de coordonner des équipes, de résoudre des
 								problèmes opérationnels, et d'apprendre à mettre en place des
 								structures organisationnelles efficientes.
 							</p>
@@ -159,7 +163,7 @@
 						<i class="fa-solid fa-user-check"></i>Autonome
 					</p>
 					<p class="hidden-up">
-						<i class="fa-solid fa-person-chalkboard"></i>Leadership
+						<i class="fa-solid fa-person-chalkboard"></i>Proactif
 					</p>
 					<p class="hidden-up">
 						<i class="fa-solid fa-people-group"></i>Sociable
@@ -167,7 +171,7 @@
 				</div>
 			</section>
 			<section class="remerciements general hidden">
-				<h1 class="hidden-slidein">Merci pour votre attention !</h1>
+				<h1 class="hidden-slidein">Merci de votre attention !</h1>
 			</section>
 			<footer>
 				<p>&#169; Copyright - Edgar HERRERA SANSIVIRINI - 2024</p>
